output/pymdp_execute_logs/gnn_POMDP_example_rendered/stderr.log
  File "/home/trim/Documents/GitHub/GeneralizedNotationNotation/output/gnn_rendered_simulators/pymdp/gnn_POMDP_example/gnn_POMDP_example_rendered.py", line 102
    =
    ^
SyntaxError: invalid syntax
